Reimplement the service as a PersistenceManager
Apache Felix's ConfigurationAdmin service relies on PersistenceManagers
to provide configuration properties. Move implementation in this
direction, and fix it and its tests.